Bug 443420 - Missing #include <array> with Clang+libc++ in widgets/EditProfileDialog.cpp
Summary: Missing #include <array> with Clang+libc++ in widgets/EditProfileDialog.cpp
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-07 02:04 UTC by Andy Gebauer
Modified: 2021-10-12 01:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andy Gebauer 2021-10-07 02:04:53 UTC
SUMMARY
In widgets/EditProfileDialog.cpp, an #include <array> is missing.
Clang throws an implicit instantiation of undefined template error

STEPS TO REPRODUCE
1. Compile with clang
2. 
3. 

OBSERVED RESULT
Throws implicit instantiation of undefined template error

EXPECTED RESULT
Compile should run through

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.22.5
(available in About System)
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2021-10-09 04:54:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/502
Comment 2 Kurt Hindenburg 2021-10-12 01:49:37 UTC
Git commit 1defe4f6c19c1c255b20bb56be64a7199048429f by Kurt Hindenburg, on behalf of James Beddek.
Committed on 12/10/2021 at 01:44.
Pushed by hindenburg into branch 'master'.

EditProfileDialog: fix build with Clang and libc++

Convert std::array to a static const built-in array
Signed-off-by: James Beddek <telans@posteo.de>

M  +1    -1    src/widgets/EditProfileDialog.cpp

https://invent.kde.org/utilities/konsole/commit/1defe4f6c19c1c255b20bb56be64a7199048429f