EditProfileDialog: fix build with Clang and libc++

Convert std::array to a static const built-in array

BUG: 443420
Signed-off-by: James Beddek <telans@posteo.de>